[gd_scene load_steps=3 format=3 uid="uid://dpsi0gkvlge1v"]

[ext_resource type="Script" uid="uid://d1sdtprth3ct8" path="res://Weapons/Staves/stop_sign_attack.gd" id="1_buvix"]
[ext_resource type="Texture2D" uid="uid://7aa8mcnp8v5n" path="res://Weapons/Assets/Staves/StopSign/stop_sign_attack.png" id="2_65rfk"]

[node name="StopSignAttack" type="Node2D"]
script = ExtResource("1_buvix")
metadata/_custom_type_script = "uid://u4hlhq7vgeit"

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_65rfk")

[node name="AttackArea" type="Area2D" parent="."]
scale = Vector2(2, 2)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackArea"]
polygon = PackedVector2Array(-31, -60, -60, -31.4, -60, 31.3, -31, 59.4, -31, 60, 31.3, 60, 59.4, 31, 60, 31, 60, -31.4, 31, -59.5)

[node name="StopTimer" type="Timer" parent="."]

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="StopTimer" to="." method="_on_stop_timer_timeout"]
